MY DEV ORG/src/objects/DocLink__c.object
<CustomObject>
    <fields>
        <fullName>Inventory_Link__c</fullName>
        <label>Inventory Link</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inventory_Type__c</fullName>
        <label>Inventory Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <label>Link</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>DocLink</label>
    <nameField>
        <label>DocLink Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DocLinks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>